# clox-plus-plus

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  error.cpp  error.hpp  main.cpp
src/callable/: callable.hpp
src/class/: class.cpp  class.hpp
src/environment/: environment.cpp  environment.hpp
src/expression/: expr.hpp
src/function/: function.cpp  function.hpp
src/function/getter/: getter.cpp  getter.hpp
src/function/native_function/: nativeFunction.cpp  nativeFunction.hpp
src/function/setter/: setter.cpp  setter.hpp
src/instance/: instance.cpp  instance.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/parser/: parse_error.hpp  parser.cpp  parser.hpp
src/property/: property.hpp
src/resolver/: resolver.cpp  resolver.hpp
src/scanner/: scanner.cpp  scanner.hpp
src/statement/: stmt.hpp
src/token/: token.cpp  token.hpp  token_type.hpp
src/utils/: generate_ast.hpp  generate_expr.cpp  generate_stmt.cpp  splitter.hpp
src/utils/ast_printer/: ast_printer.cpp  ast_printer.hpp
